--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/mongo.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mongo-java-driver-3.4.2.jar=/home/lrobalino/Baixades/mongo-java-driver-3.4.2.jar
+file.reference.mongo-java-driver-3.4.2.jar-1=/home/ilopez/Baixades/mongo-java-driver-3.4.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-3.4.2.jar}
+    ${file.reference.mongo-java-driver-3.4.2.jar}:\
+    ${file.reference.mongo-java-driver-3.4.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
